--- a/job.html
+++ b/job.html
@@ -25,8 +25,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="propos.html">à propos de moi</a></li>
-							<li><a href="index.html">Projets d'études</a></li>
+							<li><a href="index.html">à propos de moi</a></li>
+							<li><a href="projets.html">Projets d'études</a></li>
 							<li><a href="benevolat.html">bénévolat</a></li>
 							<li class="active"><a href="job.html">Jobs d'été</a></li>
 							<li><a href="CV_MANGEOT_Cyprien.pdf" target="_blank">curriculum vitae</a></li>
