--- a/benevolat.html
+++ b/benevolat.html
@@ -26,6 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">à propos de moi</a></li>
+							<li><a href="master.html">mon master</a></li>
 							<li><a href="projets.html">Projets d'études</a></li>
 							<li class="active"><a href="benevolat.html">bénévolat</a></li>
 							<li><a href="job.html">jobs d'été</a></li>
