--- a/projets.html
+++ b/projets.html
@@ -27,6 +27,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">à propos de moi</a></li>
+							<li><a href="master.html">mon master</a></li>
 							<li class="active"><a href="projets.html">Projets d'études</a></li>
 							<li><a href="benevolat.html">bénévolat</a></li>
 							<li><a href="job.html">Jobs d'été</a></li>
