--- a/master.html
+++ b/master.html
@@ -14,20 +14,11 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-                <div id="intro">
-                    <h1>Data Science Portfolio <br />-<br />Cyprien MANGEOT
-                        <br />
-                        <br />                       
-                    </h1>
-
-                </div>
+		
 
 				<!-- Header -->
 					<header id="header">
-						<a class="logo">à propos de moi</a>
+						<a class="logo">mon master</a>
 					</header>
 
 				<!-- Nav -->
@@ -61,7 +52,7 @@
 										</style>
 										</head>
 										<body>
-										<img src="images/univ.jpg" width="30%" class="image">
+										<img src="images/univ.jpg" width="37%" class="image">
 										
 								</header>
 
