--- a/projets.html
+++ b/projets.html
@@ -86,7 +86,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">Mai 2022</span>
+										<span class="date">Janvier 2022</span>
 										<h2><a href="Compte_Rendu_TP_ALA.pdf" target="_blank">Projet de Master 1 : Étude de l'algorithme Page Rank de Google</a></h2>
 									</header>
 									<a href="Compte_Rendu_TP_ALA.pdf" target="_blank" class="image fit"><img src="images/page_rank.png" alt="" /></a>
