--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										</style>
 										</head>
 										<body>
-										<img src="images/cyp.jpg" width="200cm" class="image">
+										<img src="images/cyp.jpeg" width="200cm" class="image">
 										<h1>Bienvenue sur mon Portfolio</h1>
 								</header>
 
