--- a/projets.html
+++ b/projets.html
@@ -48,6 +48,28 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">Novembre à Décembre 2022</span>
+										<h2>Projet de Master 2 : <br />Analyse de données d’un dataset de speed dating</h2>
+									</header>
+									<a class="image fit"><img src="images/speed_dating.jpg" alt="" /></a>
+									<p>Ce projet est réalisé dans le cadre de l’UE Statistique pour les données de grande dimension suivie à l’École
+										 des Mines de Nancy. Le dataset (provenant de la banque de données OpenML, et disponible 
+										 <a href="https://www.openml.org/search?type=data&sort=runs&status=active&qualities.NumberOfFeatures=between_10_100&id=40536&fbclid=IwAR1-CCs3kMet9aFNV25kjyr5Yu3sOq4uvKnGkS8HVP2QyctbA8FFxmxvDRE" target="_blank"><span class="label">ici</span></a>) 
+										 contient les données relatives à
+										  un évènement expérimental de speed dating.<br />
+										  <br />
+										  Nous y trouverons des données recueillies en amont auprès des participants sur leur profil, ainsi que des données 
+										  sur leurs impressions après chaque premier rendez-vous. <br />
+										  <br />
+										  Le but de ce projet est de construire un modèle de Machine 
+										  Learning visant à prédire si une personne voudra revoir son ‘date’ ou non.
+										</p>
+									<ul class="actions special">
+										<li><a class="button">(En cours) Sera publié le 12/12/22</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">Octobre à Décembre 2022</span>
 										<h2>Projet de Master 2 : <br />Analyse prédictive au service du développement 
 											durable	</h2>
@@ -65,6 +87,7 @@
 										<li><a class="button">(En cours) Sera publié le 05/12/22</a></li>
 									</ul>
 								</article>
+							
 								<article>
 									<header>
 										<span class="date">Mars à Juin 2022</span>
