--- a/master.html
+++ b/master.html
@@ -14,7 +14,8 @@
 	</head>
 	<body class="is-preload">
 
-		
+		<!-- Wrapper -->
+		<div id="wrapper" class="fade-in">
 
 				<!-- Header -->
 					<header id="header">
