--- a/projets.html
+++ b/projets.html
@@ -71,10 +71,10 @@
 								<article>
 									<header>
 										<span class="date">Octobre à Décembre 2022</span>
-										<h2>Projet de Master 2 : <br />Analyse prédictive au service du développement 
-											durable	</h2>
+										<h2><a href="Rapport_FDEC_MANGEOT_ROGER_TOMMASINI.pdf" target="_blank">Projet de Master 2 : <br />Analyse prédictive au service du développement 
+											durable	</a></h2>
 									</header>
-									<a class="image fit"><img src="images/arbre1.jpg" alt="" /></a>
+									<a href="Rapport_FDEC_MANGEOT_ROGER_TOMMASINI.pdf" target="_blank" class="image fit"><img src="images/arbre1.jpg" alt="" /></a>
 									<p>Ce projet est proposé par l’entreprise Big Datext et la mairie de Grenoble dans le cadre de l’UE Fouille de Données 
 										et Extraction de Connaissance suivie à Telecom Nancy. Ces deux entités se sont associées pour fournir une base 
 										de données concernant les arbres de la ville.<br />
@@ -84,7 +84,7 @@
 										- D’autre part, dans l’hypothèse où un arbre peut avoir plusieurs défauts, à déterminer le nombre
 										 de défauts d’un arbre et la localisation de chaque défaut (racine, tronc, collet, houppier).</p>
 									<ul class="actions special">
-										<li><a class="button">(En cours) Sera publié le 05/12/22</a></li>
+										<li><a class="button" href="Rapport_FDEC_MANGEOT_ROGER_TOMMASINI.pdf" target="_blank">(En cours) Sera publié le 05/12/22</a></li>
 									</ul>
 								</article>
 							
