--- a/projets.html
+++ b/projets.html
@@ -36,6 +36,7 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/cyprien-mangeot-383449204/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 							<li><a href="https://github.com/CyprienMgt" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							
 						</ul>
 					</nav>
 
@@ -65,7 +66,8 @@
 										  Learning visant à prédire si une personne voudra revoir son ‘date’ ou non.
 										</p>
 									<ul class="actions special">
-										<li><a class="button">(En cours) Sera publié le 12/12/22</a></li>
+										<li><a class="button" href="preprocessing_speeddating_dataset.html" target="_blank">Voir le preprocessing</a></li>
+										<li><a class="button" href="machine_learning_part.html" target="_blank">Voir la partie ML</a></li>
 									</ul>
 								</article>
 								<article>
@@ -77,14 +79,14 @@
 									<a href="Rapport_FDEC_MANGEOT_ROGER_TOMMASINI.pdf" target="_blank" class="image fit"><img src="images/arbre1.jpg" alt="" /></a>
 									<p>Ce projet est proposé par l’entreprise Big Datext et la mairie de Grenoble dans le cadre de l’UE Fouille de Données 
 										et Extraction de Connaissance suivie à Telecom Nancy. Ces deux entités se sont associées pour fournir une base 
-										de données concernant les arbres de la ville.<br />
+										de données (disponible <a href="https://www.kaggle.com/datasets/enekoo/projet-data" target="_blank"><span class="label">ici</span></a>) concernant les arbres de la ville.<br />
 										<br />
 										L’objectif du projet consiste en deux tâches de prédiction visant :<br />
 										- D’une part à déterminer, à partir des données disponibles, si l’arbre a ou non un défaut.<br />
 										- D’autre part, dans l’hypothèse où un arbre peut avoir plusieurs défauts, à déterminer le nombre
 										 de défauts d’un arbre et la localisation de chaque défaut (racine, tronc, collet, houppier).</p>
 									<ul class="actions special">
-										<li><a class="button" href="Rapport_FDEC_MANGEOT_ROGER_TOMMASINI.pdf" target="_blank">(En cours) Sera publié le 05/12/22</a></li>
+										<li><a class="button" href="Rapport_FDEC_MANGEOT_ROGER_TOMMASINI.pdf" target="_blank">Voir le projet</a></li>
 									</ul>
 								</article>
 							
@@ -161,6 +163,7 @@
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/cyprien-mangeot-383449204/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 									<li><a href="https://github.com/CyprienMgt" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.kaggle.com/cyprienmangeot" target="_blank" class="icon brands alt fa-kaggle"><span class="label">kaggle</span></a></li>
 								</ul>
 							</section>
 						</section>
