--- a/benevolat.html
+++ b/benevolat.html
@@ -88,6 +88,7 @@
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/cyprien-mangeot-383449204/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 									<li><a href="https://github.com/CyprienMgt" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.kaggle.com/cyprienmangeot" target="_blank" class="icon brands alt fa-kaggle"><span class="label">kaggle</span></a></li>
 								</ul>
 							</section>
 						</section>
