--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										</head>
 										<body>
 										<img src="images/cyp.jpeg" width="200cm" class="image">
-										<h1>Bienvenue sur mon Portfolio</h1>
+										<h1>Bienvenue sur mon Portfolio!</h1>
 								</header>
 
 								<!-- Text stuff -->
