--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
                             <li class="active"><a href="index.html">à propos de moi</a></li>
 							<li><a href="master.html">mon master</a></li>
 							<li><a href="projets.html">Projets d'études</a></li>
-							<li><a href="benevolat.html">bénévolat</a></li>
-							<li><a href="job.html">jobs d'été</a></li>
-							<li><a href="CV_MANGEOT_Cyprien.pdf" target="_blank">curriculum vitae</a></li>
+							<li><a href="job.html">expériences professionnelles</a></li>
+							<li><a href="hobbies.html">Centres d'intérêt</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/cyprien-mangeot-383449204/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -72,7 +71,7 @@
 										</head>
 										<body>
 										<img src="images/cyp.jpeg" width="200cm" class="image">
-										<h1>Bienvenue sur mon Portfolio!</h1>
+										<h1>Bienvenue sur mon Portfolio</h1>
 								</header>
 
 								<!-- Text stuff -->
@@ -80,12 +79,18 @@
                                         des Données), parcours MCAD (Modélisation, Calcul, Aide à la Décision) à la Faculté des Sciences et 
                                         Technologies de Nancy.</p>
 
-                                    <p><b>Je recherche activement un stage d'une durée de 6 mois dans le domaine des Data Science 
-                                        (Data Analyst/Data Scientist) à partir du 1er Avril 2023, je n'ai pas de limite géographique.</b></p>
+                                    <p><b>J'occupe actuellement le poste de Stagiaire Data Scientist au sein de l'entreprise Meelo, start-up spécialisée
+										dans la lutte contre la fraude, et situé dans la métropole Lilloise.<br>
+										Je recherche activement un CDI dans le domaine des Data Science 
+                                        (Data Scientist/Data Engineer/Data Analyst) à partir d'Octobre 2023 et je n'ai pas de limite géographique.</b></p>
 
-                                    <p>Sur ce site, vous trouverez toutes les informations utiles me concernant. Vous y trouverez la description
-										de mon master, mes différents projets d'études passés et futurs, mes jobs d'été, 
+                                    <p>Sur ce site, vous trouverez toutes les informations utiles me concernant. Notamment la description
+										de mon stage de fin d'étude, mais également celle de mon master. Vous aurez accès à mes différents projets d'études, mes jobs d'été,
 										ainsi que mes missions de bénévolat.</p>
+
+									<ul class="actions special">
+										<li><a class="button" href="CV_MANGEOT_Cyprien.pdf" target="_blank">Voir mon curriculum vitae</a></li>
+									</ul>
 
                                     <p>Si vous êtes intéressé par mon profil, n'hésitez surtout pas à me contacter :
                                         <ul>
