--- a/job.html
+++ b/job.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a class="logo">jobs d'été</a>
+					<a class="logo">expériences professionnelles</a>
 				</header>
 
 				<!-- Nav -->
@@ -39,9 +39,8 @@
 							<li><a href="index.html">à propos de moi</a></li>
 							<li><a href="master.html">mon master</a></li>
 							<li><a href="projets.html">Projets d'études</a></li>
-							<li><a href="benevolat.html">bénévolat</a></li>
-							<li class="active"><a href="job.html">Jobs d'été</a></li>
-							<li><a href="CV_MANGEOT_Cyprien.pdf" target="_blank">curriculum vitae</a></li>
+							<li class="active"><a href="job.html">expériences professionnelles</a></li>
+							<li><a href="hobbies.html">Centres d'intérêt</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/cyprien-mangeot-383449204/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -58,8 +57,29 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">Avril 2023 & Septembre 2023</span>
+										<h2>(Stage) Data Scientist </h2>
+									</header>
+									<a class="image fit"><img src="images/meelo.png" alt="" /></a>
+									<p>Meelo est une start-up Lilloise spécialisée dans la lutte contre le fraude. J'ai eu la chance d'intégrer leurs 
+										équipes en tant que Stagiaire Data Scientist pendant 5 mois.
+									</p>
+									<p>Lors de ce stage, j'ai développé un produit de lutte contre la fraude en utilisant des données de 
+										web tracking récoltées chez un client de Meelo.
+									</p>
+									<p>Ce produit est une application permettant, à partir d'un numéro client donné, de visualiser le profil digital
+										et comportemental de ce dernier. Cela permet de voir en un coup d'oeil si le client a eu un comportement suspect
+										lors de sa navigation.
+									</p>
+									<p>Par ailleurs, j'ai participé à l'amélioration du programme de catégorisation des transactions bancaires
+										servant à faire de l'Open Banking. 
+									</p>
+								</article>
+
+								<article>
+									<header>
 										<span class="date">Juin 2021 & Juin 2022</span>
-										<h2>Palisseur chez Champagne Marc Houelle </h2>
+										<h2>(Job) Palisseur chez Champagne Marc Houelle </h2>
 									</header>
 									<a class="image fit"><img src="images/vignes.jpg" alt="" /></a>
 									<p>J'ai travaillé deux étés de suite au sein de cette entreprise familiale, produisant du champagne depuis 1974.<br />
@@ -74,7 +94,7 @@
 								<article>
 									<header>
 										<span class="date">Juillet 2019 & Juillet 2022</span>
-										<h2>Agent de rangement chez BGBJ Avocats Associés</h2>
+										<h2>(Job) Agent de rangement chez BGBJ Avocats Associés</h2>
 									</header>
 									<a class="image fit"><img src="images/bgbj.jpg" alt="" /></a>
 									<p>J'ai travaillé à deux reprises au cabinet d'Avocats BGBJ & Associés, en activité depuis 1938. <br />
@@ -90,7 +110,7 @@
 								<article>
 									<header>
 										<span class="date">Août 2019 & Juillet 2020</span>
-										<h2>Agent de tri et d'entretien dans un Centre de tri des déchets recyclables</h2>
+										<h2>(Job) Agent de tri et d'entretien dans un Centre de tri des déchets recyclables</h2>
 									</header>
 									<a class="image fit"><img src="images/citraval.jpg" alt="" /></a>
 									<p>J'ai effectué deux missions d'intérimaire au sein de deux centres de tri différents : Barisien (à Épinal) en 2019 et Citraval
@@ -98,6 +118,18 @@
 										 <br />
 										 Le rôle d'agent d'entretien consiste à ramasser les déchets coincés sous les machines de tri pour éviter que celles-ci se bloquent. <br />
 										 Le rôle d'agent de tri consiste à trier les déchets recyclables à la chaîne. 
+
+									</p>
+								</article>
+								<article>
+									<header>
+										<span class="date">Février 2020</span>
+										<h2>(Bénévolat) Donneur de voix germanophone au Loria</h2>
+									</header>
+									<a class="image fit"><img src="images/loria.jpg" alt="" /></a>
+									<p>Enregistrement de plusieurs séries de phrases en allemand, destinées à étudier acoustiquement les 
+										réalisations des locuteurs. Ces expériences portent sur l'étude des différents aspects de la production
+										 de la parole.
 
 									</p>
 								</article>
