--- a/master.html
+++ b/master.html
@@ -39,9 +39,8 @@
                             <li><a href="index.html">à propos de moi</a></li>
 							<li class="active"><a href="master.html">mon master</a></li>
 							<li><a href="projets.html">Projets d'études</a></li>
-							<li><a href="benevolat.html">bénévolat</a></li>
-							<li><a href="job.html">jobs d'été</a></li>
-							<li><a href="CV_MANGEOT_Cyprien.pdf" target="_blank">curriculum vitae</a></li>
+							<li><a href="job.html">expériences professionnelles</a></li>
+							<li><a href="hobbies.html">Centres d'intérêt</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/cyprien-mangeot-383449204/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
