--- a/projets.html
+++ b/projets.html
@@ -40,9 +40,8 @@
 							<li><a href="index.html">à propos de moi</a></li>
 							<li><a href="master.html">mon master</a></li>
 							<li class="active"><a href="projets.html">Projets d'études</a></li>
-							<li><a href="benevolat.html">bénévolat</a></li>
-							<li><a href="job.html">Jobs d'été</a></li>
-							<li><a href="CV_MANGEOT_Cyprien.pdf" target="_blank">curriculum vitae</a></li>
+							<li><a href="job.html">expériences professionnelles</a></li>
+							<li><a href="hobbies.html">Centres d'intérêt</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/cyprien-mangeot-383449204/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -58,6 +57,28 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">Janvier à Mars 2023</span>
+										<h2>Mémoire de Master 2 : <br />Fouille de données spatiales </h2>
+										<h3>Étude et caractérisation des linéaires dans les paysages agricoles</h3>
+									</header>
+									<a href="Projet_Long_Recherche.pdf" target="_blank" class="image fit"><img src="images/lineaires.png" alt="" /></a>
+									<p>Dans ce mémoire, l’objectif est d’étudier et de caractériser la distribution des linéaires d’un paysage
+										agricole. <br />
+										<br />
+										La structure de ces éléments
+										a une influence sur les processus qui se déroulent dans les paysages agricoles (propagation de maladies, dynamiques liées aux populations animales, etc).<br />
+										<br />
+										Nous allons donc extraire des caractéristiques spatiales grâce à un enrichissement des données et en utilisant des algorithme de machine learning pour faire du clustering hiérarchique.<br />
+									</p>
+									<ul class="actions special">
+										<li><a class="button" href="Projet_Long_Recherche.pdf" target="_blank">Voir le mémoire</a></li>
+									</ul>
+								</article>
+
+								
+
 								<article>
 									<header>
 										<span class="date">Novembre à Décembre 2022</span>
