--- a/hobbies.html
+++ b/hobbies.html
@@ -61,7 +61,7 @@
 									<header>
 										<h2>Voyage</h2>
 									</header>
-									<a class="image fit"><img src="images/IMG_1398.JPG" alt="" /></a>
+									<a class="image fit"><img src="images/IMG_1398-min.JPG" alt="" /></a>
 									<p>J'adore voyager, principalement pour voir des beaux paysages et découvrir de nouvelles cultures.
 										En parlant de paysage, j'ai pris la photo ci-dessus en Islande.
 									</p>
