--- a/hobbies.html
+++ b/hobbies.html
@@ -72,7 +72,7 @@
 										<h2>Cuisine</h2>
 									</header>
 									<a class="image fit"><img src="images/cuisiner.jpg" alt="" /></a>
-									<p>J'aime cuisiner, ça me permet de déconnecter et de me faire plaisir à moi et à mes proches.
+									<p>J'aime cuisiner, ça me permet de déconnecter et de me faire plaisir. 
 										J'apprends grâce à des livres ou des vidéos. 
 
 									</p>
