--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-                            <li class="active"><a href="index.html">à propos de moi</a></li>
+                            <li class="active"></li><a href="index.html">à propos de moi</a></li>
 							<li><a href="master.html">mon master</a></li>
 							<li><a href="projets.html">Projets d'études</a></li>
 							<li><a href="job.html">expériences professionnelles</a></li>
