--- a/propos.html
+++ b/propos.html
@@ -44,7 +44,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-                            <li class="active"><a href="propos.html">à propos de moi</a></li>
+                            <li class="active"></li><a href="propos.html">à propos de moi</a></li>
 							<li><a href="index.html">Projets d'études</a></li>
 							<li><a href="benevolat.html">bénévolat</a></li>
 							<li><a href="job.html">jobs d'été</a></li>
