--- a/job.html
+++ b/job.html
@@ -39,7 +39,7 @@
 							<li><a href="index.html">à propos de moi</a></li>
 							<li><a href="master.html">mon master</a></li>
 							<li><a href="projets.html">Projets d'études</a></li>
-							<li class="active"><a href="job.html">expériences professionnelles</a></li>
+							<li class="active"></li><a href="job.html">expériences professionnelles</a></li>
 							<li><a href="hobbies.html">Centres d'intérêt</a></li>
 						</ul>
 						<ul class="icons">
