--- a/master.html
+++ b/master.html
@@ -37,7 +37,7 @@
 					<nav id="nav">
 						<ul class="links">
                             <li><a href="index.html">à propos de moi</a></li>
-							<li class="active"><a href="master.html">mon master</a></li>
+							<li class="active"></li><a href="master.html">mon master</a></li>
 							<li><a href="projets.html">Projets d'études</a></li>
 							<li><a href="job.html">expériences professionnelles</a></li>
 							<li><a href="hobbies.html">Centres d'intérêt</a></li>
