--- a/hobbies.html
+++ b/hobbies.html
@@ -41,7 +41,7 @@
 							<li><a href="master.html">mon master</a></li>
 							<li><a href="projets.html">Projets d'études</a></li>
 							<li><a href="job.html">expériences professionnelles</a></li>
-							<li class="active"></li><a href="hobbies.html">Centres d'intérêt</a></li>
+							<li class="active"></li><a href="hobbies.html">Centres d'intérêts</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/cyprien-mangeot-383449204/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -80,10 +80,10 @@
 
 								<article>
 									<header>
-										<h2>Numismatisme</h2>
+										<h2>Numismatique</h2>
 									</header>
 									<a class="image fit"><img src="images/CYCY1424.JPG" alt="" /></a>
-									<p>Je collectionne les pièces de 2€ commémoratives. Chaque pièces est unique et contient des références historiques.
+									<p>Je collectionne les pièces de 2€ commémoratives. Chaque pièce est unique et contient des références historiques.
 										Il m'arrive de faire des échanges de pièces avec des collectionneurs étrangers (Italiens, Grecs, Allemands, ...). 
 										La pièce (grecque) ci-dessus fait partie de ma collection.
 									</p>
