--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<li><a href="master.html">mon master</a></li>
 							<li><a href="projets.html">Projets d'études</a></li>
 							<li><a href="job.html">expériences professionnelles</a></li>
-							<li><a href="hobbies.html">Centres d'intérêt</a></li>
+							<li><a href="hobbies.html">Centres d'intérêts</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/cyprien-mangeot-383449204/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -73,16 +73,17 @@
 										<img src="images/cyp.jpeg" width="200cm" class="image">
 										<h1>Bienvenue sur mon Portfolio</h1>
 								</header>
-
-								<!-- Text stuff -->
+								<br />
+							
+									<!-- Text stuff -->
 									<p>Je m'appelle Cyprien MANGEOT, je suis actuellement en M2 IMSD (Ingénierie Mathématique pour la Science
-                                        des Données), parcours MCAD (Modélisation, Calcul, Aide à la Décision) à la Faculté des Sciences et 
-                                        Technologies de Nancy.</p>
+										des Données), parcours MCAD (Modélisation, Calcul, Aide à la Décision) à la Faculté des Sciences et 
+										Technologies de Nancy.</p>
 
                                     <p><b>J'occupe actuellement le poste de Stagiaire Data Scientist au sein de l'entreprise Meelo, start-up spécialisée
-										dans la lutte contre la fraude, et situé dans la métropole Lilloise.<br>
+										dans la lutte contre la fraude, et située dans la métropole Lilloise.<br>
 										Je recherche activement un CDI dans le domaine des Data Science 
-                                        (Data Scientist/Data Engineer/Data Analyst) à partir d'Octobre 2023 et je n'ai pas de limite géographique.</b></p>
+                                        (Data Scientist/Data Engineer/Data Analyst) à partir de Novembre 2023, je n'ai pas de limite géographique.</b></p>
 
                                     <p>Sur ce site, vous trouverez toutes les informations utiles me concernant. Notamment la description
 										de mon stage de fin d'étude, mais également celle de mon master. Vous aurez accès à mes différents projets d'études, mes jobs d'été,
