--- a/job.html
+++ b/job.html
@@ -40,7 +40,7 @@
 							<li><a href="master.html">mon master</a></li>
 							<li><a href="projets.html">Projets d'études</a></li>
 							<li class="active"></li><a href="job.html">expériences professionnelles</a></li>
-							<li><a href="hobbies.html">Centres d'intérêt</a></li>
+							<li><a href="hobbies.html">Centres d'intérêts</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/cyprien-mangeot-383449204/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -61,7 +61,7 @@
 										<h2>(Stage) Data Scientist </h2>
 									</header>
 									<a class="image fit"><img src="images/meelo.png" alt="" /></a>
-									<p>Meelo est une start-up Lilloise spécialisée dans la lutte contre le fraude. J'ai eu la chance d'intégrer leurs 
+									<p>Meelo est une start-up Lilloise spécialisée dans la lutte contre la fraude. J'ai eu la chance d'intégrer leurs 
 										équipes en tant que Stagiaire Data Scientist pendant 5 mois.
 									</p>
 									<p>Lors de ce stage, j'ai développé un produit de lutte contre la fraude en utilisant des données de 
