--- a/projets.html
+++ b/projets.html
@@ -41,7 +41,7 @@
 							<li><a href="master.html">mon master</a></li>
 							<li class="active"></li><a href="projets.html">Projets d'études</a></li>
 							<li><a href="job.html">expériences professionnelles</a></li>
-							<li><a href="hobbies.html">Centres d'intérêt</a></li>
+							<li><a href="hobbies.html">Centres d'intérêts</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/cyprien-mangeot-383449204/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
