--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 								<br />
 							
 									<!-- Text stuff -->
-									<p>Je m'appelle Cyprien MANGEOT, je suis actuellement en M2 IMSD (Ingénierie Mathématique pour la Science
-										des Données), parcours MCAD (Modélisation, Calcul, Aide à la Décision) à la Faculté des Sciences et 
+									<p>Je m'appelle Cyprien MANGEOT, je suis nouvellement diplômé du Master IMSD (Ingénierie Mathématique pour la Science
+										des Données), parcours MCAD (Modélisation, Calcul, Aide à la Décision) de la Faculté des Sciences et 
 										Technologies de Nancy.</p>
 
-                                    <p><b>J'occupe actuellement le poste de Stagiaire Data Scientist au sein de l'entreprise Meelo, start-up spécialisée
+                                    <p><b>J'ai occupé jusqu'en Septembre 2023 le poste de Stagiaire Data Scientist au sein de l'entreprise Meelo, start-up spécialisée
 										dans la lutte contre la fraude, et située dans la métropole Lilloise.<br>
-										Je recherche activement un CDI dans le domaine des Data Science 
-                                        (Data Scientist/Data Engineer/Data Analyst) à partir de Novembre 2023, je n'ai pas de limite géographique.</b></p>
+										Je recherche dès à présent un CDI dans le domaine des Data Science 
+                                        (Data Scientist/Data Engineer/Data Analyst). Je suis prêt à débuter dès que possible et je n'ai pas de limite géographique.</b></p>
 
                                     <p>Sur ce site, vous trouverez toutes les informations utiles me concernant. Notamment la description
 										de mon stage de fin d'étude, mais également celle de mon master. Vous aurez accès à mes différents projets d'études, mes jobs d'été,
